Maintenance to Java11