@@ -84,7 +84,7 @@ public class JPiereDeleteProcessFactory implements IProcessFactory {
 				//Get Process
 				try
 				{
-					process = (ProcessCall)processClass.newInstance();
+					process = (ProcessCall)processClass.getDeclaredConstructor().newInstance();
 				}
 				catch (Exception ex)
 				{
